<resources>
    <string name="app_name">GaodeMapDemo</string>
    <string name="title_activity_login">LoginActivity</string>

    <string name="cancel">取消</string>
    <string name="setting">设置</string>

    <string name="title">Designed By Cui7dr</string>

    <string name="username">账号</string>
    <string name="password">密码</string>
    <string name="btnlogin">登录</string>

    <string name="time">时间</string>
    <!-- 一氧化氮 -->
    <string name="no">NO</string>
    <string name="opaque">不透光</string>
    <string name="result">判定结果</string>

    <string name="jzmc">站点名称</string>
    <string name="hphm">车牌号</string>
    <string name="no_data">没有数据</string>
</resources>
