<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@mipmap/cui_login" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="21dp"
            android:text="@string/title"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:layout_gravity="center"
        android:layout_marginTop="70dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="14dp"
            android:text="@string/username"
            android:textSize="16sp" />

        <View
            android:layout_width="1dp"
            android:layout_height="24dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="#eee" />

        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:singleLine="true"
            android:text="请输入账号"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:layout_gravity="center"
        android:layout_marginTop="14dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="14dp"
            android:text="@string/password"
            android:textSize="16sp" />

        <View
            android:layout_width="1dp"
            android:layout_height="24dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="#eee" />

        <EditText
            android:id="@+id/et_pwd"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:inputType="textPassword"
            android:singleLine="true"
            android:text="123456"
            android:textSize="16sp" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_gravity="center"
        android:layout_marginTop="21dp"
        android:gravity="center"
        android:text="@string/btnlogin"
        android:textSize="20sp" />

</LinearLayout>